# rayjack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.md
.github/workflows/: cmake-multi-platform.yml
app/: application.cpp
rayjack/: camera.cpp  camera.h  hittable_list.cpp  hittable_list.h  material.cpp  material.h  sphere.cpp  sphere.h
rayjack/detail/: color.cpp  color.h  hit_record.h  hittable.h  interval.h  ray.h  render_thread.cpp  render_thread.h  render_thread_pool.cpp  render_thread_pool.h  utils.h
tests/: test-main.cpp  test_camera.cpp  test_color.cpp  test_hit_record.cpp  test_hittable_list.cpp  test_interval.cpp  test_material.cpp  test_ray.cpp  test_sphere.cpp  test_utils.cpp
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
